--- a/odev3-bilmuh/index.html
+++ b/odev3-bilmuh/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body style="background-color:#F6F6F6">
-    <header>
+    <header class="container">
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
